--- a/1. Preparing the data.md
+++ b/1. Preparing the data.md
@@ -11,8 +11,8 @@
   
 1. PacBio Sequel II ccs.bam file (17G) was downloaded 4 March 2023 and filtered of adaptors using HiFiAdapterFilt. Data available at NCBI accession: 
 2. Ran NanoPlot on filtered data to check statistics.
-
-- General summary:
+   
+General summary:
 - Mean read length:                11,370.9
 - Mean read quality:                   40.3
 - Median read length:              11,103.0
@@ -31,6 +31,6 @@
    minimap2 -K 2g -t 8 -ax map-hifi -o $OUTDIR/${prefix_name}.sam -a ${prefix_name}.mmi ccs.filt.fastq.gz
    ```
    
-5. Output from the mapping was VSD_unmapped.bam (20G) and VSD_mapped.bam (27M)
-6. Parental Illumina data was available from previous work within our lab in 2021 by Gurpreet Singh ([https://sydney.primo.exlibrisgroup.com/permalink/61USYD_INST/1c0ug48/alma991032323073205106](url)),  and is available at NCBI accessions: SRR28294700 (maternal S1 raw data) and SRR28294699 (paternal RUQ1347 raw data). This data was trimmed of adaptors and low quality reads using fastp in default mode.
+5. Output from the mapping was unmapped.bam (6.8G) and mapped.bam (93M)
+6.Illumina RNAseq data was available from previous work and is available at NCBI accessions: . This data was trimmed of adaptors and low quality reads using fastp in default mode.
 7. We proceeded with the unmapped reads (_Syzygium luehmannii_) to build the genome.
