Update 1. Preparing the data.md

--- a/1. Preparing the data.md
+++ b/1. Preparing the data.md
@@ -23,7 +23,7 @@ General summary:
 
 
 3. Ramiacotti Centre for Genomics, UNSW, HiC paired-end fastq.gz data (using Phase Genomics library preparation kit) (47G) was downloaded on the 27 April 2023. Raw data available at NCBI accession: .
-4. We mapped the data to the _Austropuccinia psidii_ genome available ([https://zenodo.org/records/6476632](url)) with minimap2 to separate plant from pathogen reads. We then processed .sam to .bam with samtools.
+4. We mapped the data to the diploid _Austropuccinia psidii_ genome ([https://zenodo.org/records/6476632](url)), and included the mitochondrial sequence, with minimap2 to separate plant from pathogen reads. We then processed .sam to .bam with samtools.
 
    
    ```
@@ -32,5 +32,4 @@ General summary:
    ```
    
 5. Output from the mapping was unmapped.bam (6.8G) and mapped.bam (93M)
-6.Illumina RNAseq data was available from previous work and is available at NCBI accessions: . This data was trimmed of adaptors and low quality reads using fastp in default mode.
-7. We proceeded with the unmapped reads (_Syzygium luehmannii_) to build the genome.
+6. We proceeded with the unmapped reads (_Syzygium luehmannii_) to build the genome.
