Update 1. Preparing the data.md

--- a/1. Preparing the data.md
+++ b/1. Preparing the data.md
@@ -23,7 +23,7 @@ General summary:
 
 
 3. Ramiacotti Centre for Genomics, UNSW, HiC paired-end fastq.gz data (using Phase Genomics library preparation kit) (47G) was downloaded on the 27 April 2023. Raw data available at NCBI accession: .
-4. We mapped the data to the diploid _Austropuccinia psidii_ genome ([https://zenodo.org/records/6476632](url)), and included the mitochondrial sequence, with minimap2 to separate plant from pathogen reads. We then processed .sam to .bam with samtools.
+4. We mapped the .ccs data to the diploid _Austropuccinia psidii_ genome ([https://zenodo.org/records/6476632](url)), and included the mitochondrial sequence, with minimap2 to separate plant from pathogen reads. We then processed .sam to .bam with samtools.
 
    
    ```
@@ -31,5 +31,5 @@ General summary:
    minimap2 -K 2g -t 8 -ax map-hifi -o $OUTDIR/${prefix_name}.sam -a ${prefix_name}.mmi ccs.filt.fastq.gz
    ```
    
-5. Output from the mapping was unmapped.bam (6.8G) and mapped.bam (93M)
-6. We proceeded with the unmapped reads (_Syzygium luehmannii_) to build the genome.
+5. Output from the mapping was unmapped.bam (6.8G) and mapped.bam (93M). As the pathogen haploid genome is 1G, the read coverage was too low to continue with genome assembly.
+6. We proceeded with the unmapped, filtered ccs reads (_Syzygium luehmannii_) combined with the HiC reads to build the diploid genome.
