Update 1. Preparing the data.md

--- a/1. Preparing the data.md
+++ b/1. Preparing the data.md
@@ -31,5 +31,5 @@ General summary:
    minimap2 -K 2g -t 8 -ax map-hifi -o $OUTDIR/${prefix_name}.sam -a ${prefix_name}.mmi ccs.filt.fastq.gz
    ```
    
-5. Output from the mapping was unmapped.bam (6.8G) and mapped.bam (93M). As the pathogen haploid genome is 1G, the read coverage was too low to continue with genome assembly.
-6. We proceeded with the unmapped, filtered ccs reads (_Syzygium luehmannii_) combined with the HiC reads to build the diploid genome.
+5. Output from the mapping was unmapped_to_pathogen (98%) and mapped_to_pathogen (2%). As the pathogen haploid genome is 1G, the diploid read coverage was too low (at only 0.2 times) to continue with genome assembly.
+6. We proceeded with the unmapped, filtered ccs reads (_Syzygium luehmannii_) combined with the HiC reads to build the diploid genome. The diploid coverage for the plant was aproximately 24 times.
