Update 1. Preparing the data.md

--- a/1. Preparing the data.md
+++ b/1. Preparing the data.md
@@ -1,5 +1,5 @@
 
-#### Software and versions are listed below
+#### Software and versions
 
 - HiFiAdapterFilt [https://github.com/sheinasim/HiFiAdapterFilt](url)
 - NanoPlot [https://github.com/wdecoster/NanoPlot](url)
