Update 1. Preparing the data.md

--- a/1. Preparing the data.md
+++ b/1. Preparing the data.md
@@ -1,11 +1,11 @@
 
 #### Software and versions
 
-- HiFiAdapterFilt [https://github.com/sheinasim/HiFiAdapterFilt](url)
-- NanoPlot [https://github.com/wdecoster/NanoPlot](url)
-- minimap2/2.21-r1071 [https://github.com/lh3/minimap2](url)
-- samtools/1.9 [https://github.com/samtools/samtools](url)
-- fastp/0.19.6 [https://github.com/OpenGene/fastp](url)
+- HiFiAdapterFilt <https://github.com/sheinasim/HiFiAdapterFilt>
+- NanoPlot <https://github.com/wdecoster/NanoPlot>
+- minimap2/2.21-r1071 <https://github.com/lh3/minimap2>
+- samtools/1.9 <https://github.com/samtools/samtools>
+- fastp/0.19.6 <https://github.com/OpenGene/fastp>
 
   #### Process
   
@@ -23,7 +23,7 @@ General summary:
 
 
 3. Ramiacotti Centre for Genomics, UNSW, HiC paired-end fastq.gz data (using Phase Genomics library preparation kit) (47G) was downloaded on the 27 April 2023. Raw data available at NCBI accession: .
-4. We mapped the .ccs data to the diploid _Austropuccinia psidii_ genome ([https://zenodo.org/records/6476632](url)), and included the mitochondrial sequence, with minimap2 to separate plant from pathogen reads. We then processed .sam to .bam with samtools.
+4. We mapped the .ccs data to the diploid _Austropuccinia psidii_ genome <https://zenodo.org/records/6476632>, and included the mitochondrial sequence, with minimap2 to separate plant from pathogen reads. We then processed .sam to .bam with samtools.
 
    
    ```
