Update 1. Preparing the data.md

--- a/1. Preparing the data.md
+++ b/1. Preparing the data.md
@@ -33,3 +33,5 @@ General summary:
    
 5. Output from the mapping was unmapped_to_pathogen (98%) and mapped_to_pathogen (2%). As the pathogen haploid genome is 1G, the diploid read coverage was too low to continue with genome assembly.
 6. We proceeded with the unmapped, filtered ccs reads (_Syzygium luehmannii_) combined with the HiC reads to build the diploid genome. The diploid coverage for the plant was aproximately 24 times.
+7. PacBio Sequel II fastq data filtered of adaptors using HiFiAdapterFilt and the HiC chromatin data is available at NCBI accessions SRR28640830 and SRR28640829 under BioProject: PRJNA1099473
+
