Update 1. Preparing the data.md

--- a/1. Preparing the data.md
+++ b/1. Preparing the data.md
@@ -9,7 +9,7 @@
 
   #### Process
   
-1. PacBio Sequel II ccs.bam file (17G) was downloaded 4 March 2023 and filtered of adaptors using HiFiAdapterFilt. Data available at NCBI accession: 
+1. PacBio Sequel II ccs.bam file (17G) was downloaded 4 March 2023 and filtered of adaptors using HiFiAdapterFilt. Data available at NCBI accession:PRJNA1099473. 
 2. Ran NanoPlot on filtered data to check statistics.
    
 General summary:
@@ -22,7 +22,7 @@ General summary:
 - Total bases:             25,185,858,588.0
 
 
-3. Ramiacotti Centre for Genomics, UNSW, HiC paired-end fastq.gz data (using Phase Genomics library preparation kit) (47G) was downloaded on the 27 April 2023. Raw data available at NCBI accession: .
+3. Ramiacotti Centre for Genomics, UNSW, HiC paired-end fastq.gz data (using Phase Genomics library preparation kit) (47G) was downloaded on the 27 April 2023. Raw data available at NCBI accession:PRJNA1099473.
 4. We mapped the .ccs data to the diploid _Austropuccinia psidii_ genome <https://zenodo.org/records/6476632>, and included the mitochondrial sequence, with minimap2 to separate plant from pathogen reads. We then processed .sam to .bam with samtools.
 
    
