--- a/1. Preparing the data.md
+++ b/1. Preparing the data.md
@@ -1,7 +1,7 @@
 
 #### Software and versions
 
-- HiFiAdapterFilt(v2.0.0) <https://github.com/sheinasim/HiFiAdapterFilt>
+- HiFiAdapterFilt/2.0.0 <https://github.com/sheinasim/HiFiAdapterFilt>
 - NanoPlot <https://github.com/wdecoster/NanoPlot>
 - minimap2/2.21-r1071 <https://github.com/lh3/minimap2>
 - samtools/1.9 <https://github.com/samtools/samtools>
